# paddington

./: README.md  example.py  pyproject.toml
examples/: aiogram_router.py  base.py  didiator_mediator.py
examples/aiogram_router/: README.md  bot.py  bot_object.py  dispatch.py  routers.py
examples/tg_bot/: README.md  bot.py
examples/tg_bot/bot_framework/: client.py  dispatch.py  routers.py  types.py
examples/web_app/: README.md  app.py  wsgi_rest_view.py  wsgi_switch.py
examples/web_app/web_framework/: app.py  rest_view.py
src/paddington/: __init__.py  context.py  errors.py  protocols.py  switch.py
src/paddington/switches/: __init__.py  base.py  joint.py  map.py  sequential.py  tie.py  tiejoint.py  wheelset.py
tests/: test_joint.py
